// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DisplayResults should match snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    sentences={
        Array [
            Object {
              "sentence_id": 0,
              "text": "I hope that we can reach an amicable understanding and a solution to this problem.",
              "tones": Array [
                Object {
                  "score": 0.897416,
                  "tone_id": "analytical",
                  "tone_name": "Analytical",
                },
                Object {
                  "score": 0.647986,
                  "tone_id": "tentative",
                  "tone_name": "Tentative",
                },
                Object {
                  "score": 0.44646,
                  "tone_id": "sadness",
                  "tone_name": "Sadness",
                },
              ],
            },
            Object {
              "sentence_id": 1,
              "text": "Our clients have done business together previously, and my client is interested in maintaining a profitable business- partner relationship with Mr. Compresi, assuming that your client can fulfill Mr. Farley’s order at the price promised in his letter.",
              "tones": Array [
                Object {
                  "score": 0.580387,
                  "tone_id": "positive",
                  "tone_name": "Positive",
                },
                Object {
                  "score": 0.550576,
                  "tone_id": "analytical",
                  "tone_name": "Analytical",
                },
              ],
            },
          ]
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <withRouter(Connect(Component)) />,
        <withRouter(Connect(SentencesToneDisplay)) />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <withRouter(Connect(Component)) />,
          <withRouter(Connect(SentencesToneDisplay)) />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`DisplayResults shuold match snapshot when passed different results 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    sentences={
        Object {
            "documentTone": Array [
              Object {
                "score": 0.619992,
                "tone_id": "positive",
                "tone_name": "Positive",
              },
              Object {
                "score": 0.448741,
                "tone_id": "tentative",
                "tone_name": "Tentative",
              },
              Object {
                "score": 0.440216,
                "tone_id": "analytical",
                "tone_name": "Analytical",
              },
            ],
            "sentences": Array [
              Object {
                "sentence_id": 0,
                "text": "My client feels that it would be mutually beneficial for both parties to come to an agreement for the price of each 4’ x 6’ double paned glass window.",
                "tones": Array [
                  Object {
                    "score": 0.353962,
                    "tone_id": "positive",
                    "tone_name": "Positive",
                  },
                  Object {
                    "score": 0.294703,
                    "tone_id": "sadness",
                    "tone_name": "Sadness",
                  },
                ],
              },
              Object {
                "sentence_id": 1,
                "text": "My client has stayed in business a long time by offering reasonable prices and developing customer loyalty.",
                "tones": Array [
                  Object {
                    "score": 0.571513,
                    "tone_id": "positive",
                    "tone_name": "Positive",
                  },
                  Object {
                    "score": 0.482451,
                    "tone_id": "analytical",
                    "tone_name": "Analytical",
                  },
                ],
              },
              Object {
                "sentence_id": 2,
                "text": "He would like to maintain a business-relationship with Mr. Farley.",
                "tones": Array [
                  Object {
                    "score": 0.497569,
                    "tone_id": "tentative",
                    "tone_name": "Tentative",
                  },
                  Object {
                    "score": 0.227267,
                    "tone_id": "positive",
                    "tone_name": "Positive",
                  },
                ],
              },
              Object {
                "sentence_id": 3,
                "text": "Please review this email and let me know whether your client is also willing to negotiate a fair price for each window.",
                "tones": Array [
                  Object {
                    "score": 0.579367,
                    "tone_id": "analytical",
                    "tone_name": "Analytical",
                  },
                  Object {
                    "score": 0.359409,
                    "tone_id": "positive",
                    "tone_name": "Positive",
                  },
                ],
              },
            ],
            "sentencesTone": Object {
              "primary": Array [
                "Analytical",
                "Positive",
              ],
              "secondary": Array [
                "Tentative",
                "Analytical",
              ],
            },
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <withRouter(Connect(Component)) />,
        <withRouter(Connect(SentencesToneDisplay)) />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <withRouter(Connect(Component)) />,
          <withRouter(Connect(SentencesToneDisplay)) />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
